--- a/css/misc/vars.css
+++ b/css/misc/vars.css
@@ -15,6 +15,7 @@
     --secondary-color-900: rgba(248,105,0, 0.9);
     --secondary-color-500: rgba(248,105,0, 0.5);
     --secondary-color-300: rgba(248,105,0, 0.3);
+    --secondary-color-200: rgba(248,105,0, 0.2);
 
     /* 1F1F1F - Color Oscuro - Negro */
     --dark-color-solid: rgba(31, 31, 31, 1.0);
