--- a/css/partials/header.css
+++ b/css/partials/header.css
@@ -14,12 +14,10 @@
  .header__img {
      max-width: 12rem;
      /* min-width: 10rem; */
-     flex-grow: 1;
  }
 
  .header__text_logo {
      text-transform: uppercase;
-     flex-grow: 1;
      text-align: center;
      font-size: var(--font-jumbo);
      text-shadow: 2px 2px 3px black;
@@ -27,20 +25,26 @@
  }
 
  .header__box {
-     padding-left: 10em;
-     padding-right: 10em;
+     padding-left: 5em;
+     padding-right: 5em;
      display: flex;
      flex-wrap: nowrap;
      align-items: center;
-     justify-content: space-around;
+     justify-content: space-between;
+     gap: 20px;
      /* max-height: 83px; */
  }
 
- @media screen and (max-width: 1920px) {
+ .navbar__toggle {
+     background: none;
+     border: none;
+     font-size: var(--font-inter);
+     display: none;
+ }
 
-     .header__text_logo {
-         font-size: var(--font-xlarge);
-     }
+ .header__text_logo {
+     font-size: var(--font-xlarge);
+ }
  }
 
  @media screen and (max-width: 1024px) {
@@ -58,6 +62,22 @@
      .header__text_logo {
          font-size: var(--font-medium);
      }
+
+     header {
+         font-family: var(--primary-font);
+         color: var(--light-color-900);
+         background-color: var(--primary-color-solid);
+         padding: var(--spacing-18);
+         padding: 0 auto;
+         height: 10vw;
+     }
+
+     .header__box {
+         justify-content: space-between;
+         padding: 0;
+         gap: 10px;
+     }
+
  }
 
  @media screen and (max-width: 480px) {
@@ -71,6 +91,7 @@
          transition: all .3s ease-in-out;
 
      }
+
 
  }
 
@@ -124,18 +145,11 @@
      font-weight: 300;
  }
 
-.destacado{
-    background-color: var(--secondary-color-solid);
-}
-.submenuopen:hover .destacado{
-    text-decoration: none !important;
-padding: 10px !important;
-color: #ffffff !important;
-background-color: #69293a !important;
-border-radius: 6px !important;
-    /* background-color: var(--secondary-color-200);
-    transition: all .3s ease-in-out; */
-}
+ .destacado {
+     background-color: var(--secondary-color-solid);
+ }
+
+
  .submenuopen:hover .submenu {
      display: block;
  }
@@ -143,6 +157,8 @@ border-radius: 6px !important;
  .submenu__item:hover {
      background-color: var(--secondary-color-900);
  }
+
+
 
  /* @media screen and (max-width: 1020px) {
 
