Finalización de menú responsive previo a agragar js

--- a/css/partials/header.css
+++ b/css/partials/header.css
@@ -62,7 +62,7 @@ header {
 
 .navbar__link {
   text-transform: uppercase;
-  font-size: var(--font-inter);
+  font-size: var(--font-small);
   font-family: var(--alternative-font);
   padding: var(--spacing-8) var(--spacing-18);
   display: inline-block;
@@ -90,7 +90,7 @@ header {
 
 .submenu__link {
   text-align: left;
-  font-size: var(--font-inter);
+  font-size: var(--font-small);
   font-family: var(--primary-font);
   font-weight: 300;
 }
@@ -104,6 +104,7 @@ header {
 }
 
 .submenu__item:hover {
+  border-radius: 3px;
   background-color: var(--secondary-color-900);
 }
 
@@ -119,7 +120,7 @@ header {
   .navbar__toggle {
     display: block;
   }
-  
+
   header {
     font-family: var(--primary-font);
     color: var(--light-color-900);
@@ -130,7 +131,7 @@ header {
   }
 
   .navbar {
-    width: 40vw;
+    width: 200px;
     margin-top: 0;
     top: 100px;
     position: absolute;
@@ -152,8 +153,13 @@ header {
   .navbar__item:hover {
     background-color: var(--secondary-color-900);
   }
+  .submenu__item{
+    width: 200px;
+  }
   .submenu {
-    position: relative;
+    /* display: block; */
+    position: absolute;
+    left: -100px;
   }
   .header__img {
     max-width: 10rem;
