--- a/css/partials/header.css
+++ b/css/partials/header.css
@@ -116,8 +116,8 @@ header {
 
 /* RESPONSIVE PARA DISPOSITIVOS MEDIANOS */
 @media screen and (max-width: 768px) {
-
   .navbar__toggle {
+    z-index: 100;
     display: block;
   }
 
@@ -135,6 +135,11 @@ header {
     margin-top: 0;
     top: 100px;
     position: absolute;
+    right: 100%;
+    transition: right 0.4s;
+  }
+
+  .navbar-active {
     right: 0;
   }
   .navbar__menu {
@@ -153,8 +158,12 @@ header {
   .navbar__item:hover {
     background-color: var(--secondary-color-900);
   }
-  .submenu__item{
+  .submenu__item {
     width: 200px;
+  }
+
+  .submenu__link {
+    font-size: var(--font-medium);
   }
   .submenu {
     /* display: block; */
