Footer finalizado por el momento

--- a/css/misc/vars.css
+++ b/css/misc/vars.css
@@ -56,6 +56,8 @@
     --font-medium: 1.8em;
     --font-small: 1.6em;
     --font-xsmall: 1.4em;
+    --font-normal: 1.2em;
+    --font-xnormal: 1em;
 
 
     /* Espaciados */
