agregación de ícono flotante de wsp

--- a/css/misc/vars.css
+++ b/css/misc/vars.css
@@ -48,6 +48,7 @@
 
 
     /* Tamaños de Fuentes */
+    --font-wspico: 6em;
     --font-display: 4.6em;
     --font-jumbo: 3.8em;
     --font-xlarge: 3.0em;
