[FEAT] Readecuación de grid - se agrega nueva sección en Institucional

--- a/css/pages/institucional.css
+++ b/css/pages/institucional.css
@@ -3,11 +3,11 @@
     display: grid;
     /* width: 100%; */
     grid-template-areas:
-        "aside_l articlec aside_r"
-        "aside_l articlec aside_r"
-        "aside_l articlec aside_r"
-        "aside_l articlec aside_r";
-    grid-template-columns: minmax(max-content, 100px) 1fr 10%;
+        "aside_l articlec"
+        "aside_l articlec"
+        "aside_l articlec"
+        "aside_l articlec";
+    grid-template-columns: minmax(220px, 100px) 1fr;
     grid-gap: 20px;
     grid-auto-rows: auto;
 }
@@ -52,7 +52,7 @@
 
 .article-funcion {
     display: grid;
-    grid-template-columns: 1.3fr 1fr;
+    grid-template-columns: 1.2fr 1fr;
     gap: 10px;
 }
 
@@ -64,7 +64,7 @@
     align-items: center;
     margin-top: 10px;
     box-shadow: 4px 4px 4px var(--dark-color-500);
-    padding: 20px;
+    padding: 10px;
     border-radius: 10px;
 }
 
@@ -76,21 +76,22 @@
     background-color: var(--terciary-color-solid);
 }
 .box-1{
+    
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 1;
-    grid-row-end: 3;
+    grid-row-end: 4;
 }
 .box-2{
     grid-column-start: 1;
     grid-column-end: 2;
-    grid-row-start: 3;
-    grid-row-end: 4;
+    grid-row-start: 4;
+    grid-row-end: 5;
 }
 .box-3{
     grid-column-start: 1;
     grid-column-end: 2;
-    grid-row-start: 4;
+    grid-row-start: 5;
     grid-row-end: 6;
 }
 .box-4{
@@ -102,8 +103,40 @@
 .box-5{
     grid-column-start: 2;
     grid-column-end: 3;
-    grid-row-start: 5;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+.box-6{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
+.box-7{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
+}
+.box-8{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 6;
     grid-row-end: 7;
+}
+.box-9{
+    margin: 0 auto;
+    align-self: center;
+    justify-self: center;   
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 4;
+    grid-row-end: 6;
+}
+
+.box-img{
+    max-width: 400px;
 }
 .box-title{
     margin-bottom: 10px;
@@ -116,9 +149,9 @@
     max-width: 250px;
 }
 
-.aside_right {
+/* .aside_right {
     grid-area: aside_r;
-}
+} */
 
 .article_title {
     font-family: var(--primary-font);
