--- a/css/misc/vars.css
+++ b/css/misc/vars.css
@@ -72,7 +72,11 @@
     --spacing-128: 12.8rem;
     --spacing-68: 6.8rem;
     --spacing-36: 3.6rem;
+    --spacing-34: 3.4rem;
+    --spacing-32: 3.2rem;
+    --spacing-30: 3.0rem;
     --spacing-28: 2.8rem;
+    --spacing-26: 2.6rem;
     --spacing-24: 2.4rem;
     --spacing-18: 1.8rem;
     --spacing-16: 1.6rem;
