[Feat] Por que afiliarse se agrega en Institucional

--- a/css/pages/institucional.css
+++ b/css/pages/institucional.css
@@ -6,6 +6,9 @@
         "aside_l articlec"
         "aside_l articlec"
         "aside_l articlec"
+        "aside_l articlec"
+        "aside_l articlec"
+        "aside_l articlec"
         "aside_l articlec";
     grid-template-columns: minmax(220px, 100px) 1fr;
     grid-gap: 20px;
@@ -56,6 +59,24 @@
     gap: 10px;
 }
 
+.article-afiliacion{
+
+    margin-top: 10px;
+    /* align-self: center;
+    justify-self: center; */
+    display: grid;
+    grid-template-columns: 50px 1fr;
+    gap: 10px;
+}
+.article-parrafos{
+    align-self: center;
+    background-color:bisque;
+    border-radius: 10px;
+    padding: 5px;
+    /* margin: 0 auto; */
+    /* align-items: center; */
+}
+
 .box {
     font-family: var(--alternative-font);
     font-size: var(--font-small);
@@ -68,8 +89,12 @@
     border-radius: 10px;
 }
 
-.box-background_primary{
+.box-background_secondary{
     background-color: var(--secondary-color-700);
+}
+
+.box-background_primary{
+    background-color: var(--primary-color-700);
 }
 
 .box-background_terciary{
@@ -161,7 +186,6 @@
 .article_contenido {
     font-weight: 500;
     text-align: justify;
-    align-items: center;
     margin-top: 10px;
     box-shadow: 4px 4px 4px var(--dark-color-500);
     /* border-style: ridge; */
