--- a/css/pages/institucional.css
+++ b/css/pages/institucional.css
@@ -16,7 +16,7 @@
 }
 
 .article_contenido_grid {
-    font-size: var(--font-normal);
+    font-size: var(--font-small);
     font-family: var(--alternative-font);
     margin-top: 10px;
     display: grid;
@@ -37,7 +37,9 @@
 }
 
 .article-box7{
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
+    
 }
 
 .article-img_1 {
@@ -205,6 +207,11 @@
     font-size: var(--font-medium);
 }
 
+.article-iframe_mapa{
+    width: 100%; 
+    height: 100%;
+}
+
 @media screen and (max-width: 768px) {
     .sinstitucional {
         font-size: var(--font-xnormal);
@@ -228,13 +235,36 @@
     }
 }
 
-@media screen and (max-width: 390px) {
+@media screen and (max-width: 430px) {
     .article_sede {
         grid-template-columns: 1fr 1fr;
     }
+.article_contenido_grid{
+    height: 5em;
+    line-height: 1em;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    width: 100%;
+    border: 1px solid;
+}
+.article-parrafos{
+    background-color:transparent;
+}
+.article-afiliacion{
+    height: 12em;
+    line-height: 1em;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    width: 100%;
+    border: 1px solid;
+}
 
+.article-funcion{
+    display: grid;
+    grid-template-columns: 3fr;
+}
     .article-iframe {
         max-width: 100%;
-        max-height: 200px;
+        max-height:50%;
     }
 }
