--- a/css/partials/header.css
+++ b/css/partials/header.css
@@ -9,6 +9,8 @@ header {
   min-height: 100px;
   border-bottom-style: ridge;
   border-bottom-color: var(--secondary-color-solid);
+  position: fixed;
+  transition: all 0.4s ease-in-out;
 }
 
 .header__img {
@@ -206,8 +208,21 @@ header {
     gap: 10px;
   }
 }
+@media screen and (min-width: 1200px) {
+  .hidden_menu{
+    transform: translateY(-70px);
+    transition: all 0.4s ease-in-out;
+  }
+  
+  .change_img{
+    position: absolute;
+    margin-top: 125px;
+    transform: scale(0.8);
+  }
+}
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 430px) {
+
   .header__img {
     max-width: 10rem;
   }
