--- a/css/pages/institucional.css
+++ b/css/pages/institucional.css
@@ -14,7 +14,6 @@
     grid-gap: 20px;
     grid-auto-rows: auto;
     padding-top: 220px
-    
 }
 
 .article_contenido_grid {
@@ -38,10 +37,42 @@
     max-width: 1024px;
 }
 
-.article-box7{
+.article-box7 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap:10px;
+}
+
+.article_derechos {
+    padding: 20px;
+    font-family: var(--alternative-font);
+    font-size: 1.2em;
+    font-weight: 600;
     display: flex;
-    flex-wrap: wrap;
-    
+    align-items: center;
+    border-style: solid;
+    border-color: white;
+    width: 100%;
+    height: 100%;
+    min-height: 200px;
+}
+.article-box7 :nth-child(1){
+    background-color:darkorange;
+}
+.article-box7 :nth-child(2){
+    background-color:grey;
+}
+.article-box7 :nth-child(3){
+    background-color:yellow;
+}
+.article-box7 :nth-child(4){
+    background-color:cornflowerblue;
+}
+.article-box7 :nth-child(5){
+    background-color:chartreuse;
+}
+.article-box7 :nth-child(6){
+    background-color:coral;
 }
 
 .article-img_1 {
@@ -67,7 +98,7 @@
     gap: 10px;
 }
 
-.article-afiliacion{
+.article-afiliacion {
 
     margin-top: 10px;
     /* align-self: center;
@@ -76,9 +107,10 @@
     grid-template-columns: 50px 1fr;
     gap: 10px;
 }
-.article-parrafos{
+
+.article-parrafos {
     align-self: center;
-    background-color:bisque;
+    background-color: bisque;
     border-radius: 10px;
     padding: 5px;
     /* margin: 0 auto; */
@@ -97,83 +129,93 @@
     border-radius: 10px;
 }
 
-.box-background_secondary{
+.box-background_secondary {
     background-color: var(--secondary-color-700);
 }
 
-.box-background_primary{
+.box-background_primary {
     background-color: var(--primary-color-700);
 }
 
-.box-background_terciary{
+.box-background_terciary {
     background-color: var(--terciary-color-solid);
 }
-.box-1{
-    
+
+.box-1 {
+
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 4;
 }
-.box-2{
+
+.box-2 {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 4;
     grid-row-end: 5;
 }
-.box-3{
+
+.box-3 {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 5;
     grid-row-end: 6;
 }
-.box-4{
+
+.box-4 {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 6;
     grid-row-end: 7;
 }
-.box-5{
+
+.box-5 {
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
 }
-.box-6{
+
+.box-6 {
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
 }
 
-.box-7{
+.box-7 {
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 3;
     grid-row-end: 4;
 }
-.box-8{
+
+.box-8 {
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 6;
     grid-row-end: 7;
 }
-.box-9{
+
+.box-9 {
     margin: 0 auto;
     align-self: center;
-    justify-self: center;   
+    justify-self: center;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 4;
     grid-row-end: 6;
 }
 
-.box-img{
+.box-img {
     max-width: 400px;
 }
-.box-title{
+
+.box-title {
     margin-bottom: 10px;
 }
+
 .aside_left {
     font-size: var(--font-normal);
     font-family: var(--alternative-font);
@@ -209,8 +251,8 @@
     font-size: var(--font-medium);
 }
 
-.article-iframe_mapa{
-    width: 100%; 
+.article-iframe_mapa {
+    width: 100%;
     height: 100%;
 }
 
@@ -239,34 +281,48 @@
 }
 
 @media screen and (max-width: 430px) {
+
+    .article-box7 {
+        grid-template-columns: 1fr 1fr;
+        grid-gap:10px;
+        width: 100%;
+    }
     .article_sede {
         grid-template-columns: 1fr 1fr;
     }
-.article_contenido_grid{
-    height: 5em;
-    line-height: 1em;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    width: 100%;
-    border: 1px solid;
-}
-.article-parrafos{
-    background-color:revert;
-}
-.article-afiliacion{
-    height: 12em;
-    line-height: 1em;
-    overflow-x: hidden;
-    overflow-y: scroll;
-    width: 100%;
-    border: 1px solid;
-}
 
-.article-funcion{
-    all:unset;
-}
+    .article_contenido_grid {
+        height: 5em;
+        line-height: 1em;
+        overflow-x: hidden;
+        overflow-y: scroll;
+        width: 100%;
+        border: 1px solid;
+    }
+
+    .article-parrafos {
+        background-color: revert;
+    }
+
+    .article-afiliacion {
+        height: 12em;
+        line-height: 1em;
+        overflow-x: hidden;
+        overflow-y: scroll;
+        width: 100%;
+        border: 1px solid;
+    }
+    .article_derechos {
+        /* width: 45%; */
+        font-size: 1em;
+    }
+
+    .article-funcion {
+        all: unset;
+    }
+
     .article-iframe {
         max-width: 100%;
-        max-height:50%;
+        max-height: 50%;
     }
 }
