--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -1,22 +1,31 @@
-.sbeneficios{
+/* .sbeneficios{
    height: 100vw;
-}
+} */
 .banner{
+   width: 100%;
+   height: auto;
    padding-top: 11vw;
-   height: 40vw;
+   padding-bottom: 11vw;
+   /* height: 40vw; */
    /* background: linear-gradient(grey, white); */
 }
 .banner__1{
-   margin: 0 auto;
-   width: 60%;
+   /* position: relative; */
+   /* width: 60%; */
    text-align: center;  
    /* background-color:#dfdfdf; */
    background: linear-gradient(lightgrey, white,lightgrey);
-   border-radius: 20px;
-   height: 500px;
+   /* border-radius: 20px; */
+   height:  500px;
 }
 
 .banner__img{
    width: auto;
-   height:100%;
+   /* height:100%; */
+}
+
+.iconify_chevron{
+   color: var(--dark-color-solid);
+   font-size: var(--font-small);
+   font-weight: 700;
 }
