--- a/css/partials/header.css
+++ b/css/partials/header.css
@@ -9,8 +9,9 @@ header {
   min-height: 100px;
   border-bottom-style: ridge;
   border-bottom-color: var(--secondary-color-solid);
-  position: fixed;
+  position:fixed !important;
   transition: all 0.4s ease-in-out;
+  z-index: 100;
 }
 
 .header__img {
@@ -208,16 +209,29 @@ header {
     gap: 10px;
   }
 }
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1416px) {
   .hidden_menu{
-    transform: translateY(-70px);
-    transition: all 0.2s ease-in-out;
+    transform: translateY(-70px) !important;
+    transition: all 0.2s ease-in-out !important;
   }
-  
+
   .change_img{
-    position: absolute;
-    margin-top: 125px;
-    transform: scale(0.8);
+    position: absolute !important;
+    margin-top: 125px !important;
+    transform: scale(0.8) !important;
+  }
+}
+@media only screen and (min-width: 1200px) and (max-width: 1415px) {
+  .hidden_menu{
+    transform: translateY(-100px) !important;
+    transition: all 0.2s ease-in-out !important;
+  }
+
+  .change_img{
+    position: absolute !important;
+    margin-top: 150px !important;
+    margin-left: 2px !important;
+    transform: scale(0.6) !important;
   }
 }
 
