--- a/css/partials/header.css
+++ b/css/partials/header.css
@@ -9,7 +9,6 @@ header {
   min-height: 100px;
   border-bottom-style: ridge;
   border-bottom-color: var(--secondary-color-solid);
-  position:fixed !important;
   transition: all 0.4s ease-in-out;
   z-index: 100;
 }
@@ -211,6 +210,8 @@ header {
 }
 @media screen and (min-width: 1416px) {
   .hidden_menu{
+    position:fixed !important;
+    top: 0;
     transform: translateY(-70px) !important;
     transition: all 0.2s ease-in-out !important;
   }
