--- a/css/misc/vars.css
+++ b/css/misc/vars.css
@@ -52,6 +52,7 @@
     /* Tipografia */
     --primary-font: 'Inter Tight', sans-serif;
     --alternative-font: 'Raleway', sans-serif;
+    --terciary-font: 'Montserrat', sans-serif;
 
 
     /* Tamaños de Fuentes */
