--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -1,14 +1,26 @@
 /* Estilos del body del Home */
 .img_principal{
-    background-image: url(../../img/equipo.jpg);
+    background-image: url(../../img/equipo.png);
     /* padding: var(--spacing-128); */
-    height: 50vh;
+    height: 100vh;
     background-size:cover;
-    /* background-attachment: fixed; */
+    background-position: center;
+    background-attachment: fixed;
     /* filter: blur(2px) brightness(.9); */
 }
-
-.home{
+.main_texts{
+    position: absolute;
+    bottom: 30px;
+    left: 30px;
+}
+.main_text{
+    color: var(--light-bg-color-solid) ;
+    text-shadow: 0px 1px 10px rgba(0,0,0,0.9);
+    font-family: var(--terciary-font);
+    font-size: var(--font-xlarge);
+    font-weight: 700;
+}
+.alto_main{
     height: 100vh;
 }
 
@@ -23,4 +35,10 @@
     font-size: var(--font-wspico);
     border-radius: 52px;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+}
+
+@media screen and (max-width: 430px) {
+    .main_text{
+        font-size: var(--font-inter);
+    }
 }
