--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -24,7 +24,6 @@
     height: 100vh;
 }
 
-
 .wsp_float{
     position: fixed;
     width: 60px;
@@ -35,8 +34,14 @@
     font-size: var(--font-wspico);
     border-radius: 52px;
     box-shadow: 0px 1px 10px rgba(0,0,0,0.3);
+ }
+/*.main_principal{
+    position: absolute;
+}*/
+.banner_sorteos{
+    align-self: center;
+    width: 80%;
 }
-
 @media screen and (max-width: 430px) {
     .main_text{
         font-size: var(--font-inter);
