[FEAT] Verificando funcionamiento de sitio con slider

--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -16,7 +16,7 @@
 
 .banner__img1{
     border-radius: 10px;
-    box-shadow: 0px 1px 10px rgba(0,0,0,0.8);;
+    box-shadow: 0px 1px 15px rgba(0,0,0,0.6);;
 }
 
 .main_text{
@@ -28,7 +28,7 @@
 }
 
 .main_principal{
-    padding: 5px 100px;
+    padding: 10px 100px;
 }
 
 .banner_container{
@@ -49,6 +49,11 @@
 @media screen and (max-width: 430px) {
     .main_text{
         font-size: var(--font-inter);
+    }
+    .banner__img1{
+        /* padding: 0px 100px ; */
+        /* width: auto; */
+        max-height: 200px;
     }
 }
 
