--- a/css/pages/home.css
+++ b/css/pages/home.css
@@ -19,6 +19,12 @@
     box-shadow: 0px 1px 15px rgba(0,0,0,0.6);;
 }
 
+.banner__img1:hover{
+
+    transform: scale(1.8);
+    transition: all 0.3s ease-in-out;
+}
+
 .main_text{
     color: var(--light-bg-color-solid) ;
     text-shadow: 0px 1px 10px rgba(0,0,0,0.9);
