--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -8,6 +8,7 @@
    /* background: linear-gradient(grey, white); */
 }
 .banner__1{
+   padding: 10px 50px;
    /* position: relative; */
    /* width: 60%; */
    text-align: center;  
@@ -17,10 +18,11 @@
    /* height:  500px; */
 }
 
-/* .banner__img{
-   width: auto;
-   height:100%;
-} */
+.banner__img{
+   background-size: cover;
+   width: 100%;
+   height: 100%;
+}
 
 .iconify_chevron{
    color: var(--dark-color-solid);
