--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -1,27 +1,31 @@
-.banner{
-   width: 100%;
+/* .banner{
+   width: 80%;
    height: min-content;
-   padding-top: 30px;
-   /* padding-top: 11vw; */
-   /* padding-bottom: 11vw; */
-   /* height: 40vw; */
-   /* background: linear-gradient(grey, white); */
-}
+    padding-top: 30px; 
+    padding-top: 11vw; 
+    padding-bottom: 11vw; 
+   height: 40vw;
+   background: linear-gradient(grey, white);
+} */
+
 .banner__1{
-   padding: 10px 50px;
+   padding: 10px 10px;
    /* position: relative; */
    /* width: 60%; */
-   text-align: center;  
+   text-align: center;
+   /* box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.3); */
    /* background-color:#dfdfdf; */
-   background: linear-gradient(lightgrey, white,lightgrey);
-   /* border-radius: 20px; */
+   /* background: linear-gradient(lightgrey, white,lightgrey); */
+   /* border-radius: 15px; */
    /* height:  500px; */
 }
 
 .banner__img{
+   border-radius: 15px;
    background-size: cover;
    width: 100%;
    height: 100%;
+   box-shadow: 0px 2px 10px rgba(0,0,0,0.6);
 }
 
 .iconify_chevron{
