--- a/css/pages/institucional.css
+++ b/css/pages/institucional.css
@@ -146,10 +146,17 @@
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 1;
-    grid-row-end: 4;
+    grid-row-end: 3;
 }
 
 .box-2 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 4;
+}
+
+.box-10 {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 4;
