cambios en slider

--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -3,6 +3,7 @@
    text-align: center;
 }
 .title_alojamiento{
+   padding: 10px;
    font-size: 2rem;
 }
 .banner__img {
@@ -23,4 +24,13 @@
    color: var(--primary-color-900);
 }
 
+.detalle_departamento{
+   display: flex;
+   flex-wrap: nowrap;
+   gap: 10px;
+   background-color: aqua;
+}
 
+.banner_departamentos{
+   width: 50%;
+}
