--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -14,6 +14,12 @@
    /* box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.6); */
 }
 
+.banner__img1 {
+   border-radius: 15px;
+   /* background-size: cover; */
+   width: min-content;
+   height: 200px;
+}
 .iconify_chevron {
    color: var(--dark-color-solid);
    font-size: var(--font-small);
@@ -24,13 +30,23 @@
    color: var(--primary-color-900);
 }
 
-.detalle_departamento{
+/* .detalle_departamento{
    display: flex;
-   flex-wrap: nowrap;
-   gap: 10px;
-   background-color: aqua;
+   flex-wrap: wrap;
+   gap: 20px;
+   padding: 10px;
+} */
+
+/* .banner_departamentos{
+   width: 50%;
+} */
+
+.glider1{
+   margin-bottom: 10px;
+   overflow: hidden;
 }
 
-.banner_departamentos{
-   width: 50%;
+.glider-next,
+.glider-prev{
+   font-size: 3em;
 }
