--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -33,7 +33,7 @@
 .detalle_departamento{
    display: flex;
    flex-wrap: wrap;
-   gap: 20px;
+   gap: 30px;
    padding: 10px;
    justify-content: center;
 }
@@ -57,8 +57,13 @@
 }
 
 .glider_text{
+   display: flex;
+   flex-direction: column;
+   justify-content: space-evenly;
+   align-items: center;
    margin-left: 10px;
    width: 50%;
+   padding: 10px;
 }
 
 .glider-slide{
@@ -67,4 +72,8 @@
 
 .glider-dots{
    flex-wrap: nowrap;
+}
+
+.wsp_reserva:hover .icon_reserva{
+   transform: scale(1.4);
 }
