--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -61,9 +61,8 @@
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
-   margin-left: 10px;
    width: 50%;
-   padding: 10px;
+   padding: 10px 20px;
 }
 
 .glider-slide{
