--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -57,10 +57,11 @@
 }
 
 .glider_text{
+   font-family: var(--terciary-font);
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
-   align-items: center;
+   /* align-items: center; */
    width: 50%;
    padding: 10px 20px;
 }
@@ -75,4 +76,11 @@
 
 .wsp_reserva:hover .icon_reserva{
    transform: scale(1.4);
+}
+
+.link_protocolo{
+   text-align: center;
+   font-size: var(--font-xsmall);
+   color: var(--primary-color-solid);
+   font-weight: 600;
 }
