--- a/css/misc/vars.css
+++ b/css/misc/vars.css
@@ -63,6 +63,7 @@
     --font-large: 2.4em;
     --font-inter: 2.0em;
     --font-medium: 1.8em;
+    --font-msmall: 1.7em;
     --font-small: 1.6em;
     --font-xsmall: 1.4em;
     --font-normal: 1.2em;
