--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -96,17 +96,18 @@
 .link_protocolo{
    padding: 10px;
    text-align: center;
-   font-size: var(--font-xsmall);
+   font-size: var(--font-small);
    color: var(--primary-color-solid);
    font-weight: 650;
 }
 
 .detalle_subsidio{
+   margin-left: 20px;
    width: 70%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
-   padding: 25px;
+   padding: 0px 25px;
 }
 
 /* .detalle_subsidio h3{
@@ -149,3 +150,80 @@
  .lista_beneficio{
    padding: 5px;
  }
+
+ .cash{
+   font-size: var(--font-xsmall);
+   font-weight: 550;
+ }
+
+ @media screen and (max-width: 768px) {
+   .detalle_subsidio{
+      width: 100%;
+   }
+ }
+
+/*Convenio con hoteles*/
+.title_convenioHoteles{
+   padding: 0px 45px;
+}
+
+.detalle_convenioHoteles{
+   margin-top: 20px;
+   margin-bottom: 20px;
+   justify-content: center;
+   display: flex;
+   flex-wrap: wrap;
+   padding: 0px 25px;
+   gap: 10px;
+}
+.hotel{
+   display: flex;
+   flex-direction: column;
+   width: 49%;
+   margin: 0 auto; 
+   text-align: center;
+}
+
+.title_hotel{
+   justify-items: center;
+   font-family: var(--terciary-font);
+   font-size: var(--font-msmall);
+   font-weight: 550;
+   background: linear-gradient(to right top, #208764, #568d4d, #838f3a, #b08d37, #da8649);
+   margin-bottom: 10px;
+   padding: 10px 0;
+}
+
+.text_convenioHoteles{
+   margin: 10px;
+}
+
+.detalle_centuria{
+   background-size:contain;
+   background-repeat: no-repeat;
+   opacity: 0.2;
+   width: 100%;
+   height: 300px;
+   background-image: url(../../img/convenio_hoteles/logoCenturiaHotel.png);
+}
+
+.detalle_avenida{
+   background-size: contain;
+   background-repeat: no-repeat;
+   opacity: 0.2;
+   width: 100%;
+   height: 300px;
+   background-color:var(--light-color-500);
+   background-image: url(../../img/convenio_hoteles/HA1.png);
+   background-position: center;
+}
+.detalle_uthgra{
+   background-size: contain;
+   background-repeat: no-repeat;
+   opacity: 0.2;
+   width: 100%;
+   height: 300px;
+   background-color:var(--light-color-500);
+   background-image: url(../../img/convenio_hoteles/hotelUthgra.jpeg);
+   background-position: center;
+}
