--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -156,11 +156,6 @@
    font-weight: 550;
  }
 
- @media screen and (max-width: 768px) {
-   .detalle_subsidio{
-      width: 100%;
-   }
- }
 
 /*Convenio con hoteles*/
 .title_convenioHoteles{
@@ -182,6 +177,7 @@
    width: 49%;
    margin: 0 auto; 
    text-align: center;
+   position: relative;
 }
 
 .title_hotel{
@@ -201,29 +197,49 @@
 .detalle_centuria{
    background-size:contain;
    background-repeat: no-repeat;
-   opacity: 0.2;
    width: 100%;
    height: 300px;
    background-image: url(../../img/convenio_hoteles/logoCenturiaHotel.png);
+   background-position: center;
 }
 
 .detalle_avenida{
    background-size: contain;
    background-repeat: no-repeat;
-   opacity: 0.2;
    width: 100%;
    height: 300px;
-   background-color:var(--light-color-500);
    background-image: url(../../img/convenio_hoteles/HA1.png);
    background-position: center;
 }
 .detalle_uthgra{
    background-size: contain;
    background-repeat: no-repeat;
-   opacity: 0.2;
    width: 100%;
    height: 300px;
-   background-color:var(--light-color-500);
    background-image: url(../../img/convenio_hoteles/hotelUthgra.jpeg);
    background-position: center;
 }
+
+.opacidad{
+   opacity: 0.2;
+}
+
+.tarifas{
+   position: absolute;
+   text-align: left;
+   top: 25%;
+   right: 10px;
+   left: 10px;
+   font-family: var(--terciary-font);
+   font-weight: 600;
+   opacity:1;
+   color: black;
+}
+@media screen and (max-width: 768px) {
+   .detalle_subsidio{
+      width: 100%;
+   }
+   .hotel{
+      width: 100%;
+   }
+ }
