--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -194,45 +194,47 @@
    margin: 10px;
 }
 
-.detalle_centuria{
-   background-size:contain;
-   background-repeat: no-repeat;
-   width: 100%;
-   min-height: 300px;
-   background-image: url(../../img/convenio_hoteles/hotelCenturia.jpg);
-   background-position: center;
-}
-
 .detalle_avenida{
    background-size: contain;
    background-repeat: no-repeat;
    width: 100%;
-   height: 300px;
-   background-image: url(../../img/convenio_hoteles/hotelAvenida.jpg);
+   height: 430px;
+   background-image: url(../../img/convenio_hoteles/hotelAvenida.png);
    background-position: center;
 }
+
+.detalle_centuria{
+   background-size:contain;
+   background-repeat: no-repeat;
+   max-width: 100%;
+   height: 430px;
+   /* min-height: 300px; */
+   background-image: url(../../img/convenio_hoteles/hotelCenturia.png);
+   background-position: center;
+}
+
 .detalle_uthgra{
    background-size: contain;
    background-repeat: no-repeat;
    width: 100%;
-   height: 300px;
-   background-image: url(../../img/convenio_hoteles/hotelUthgra.jpg);
+   height: 430px;
+   background-image: url(../../img/convenio_hoteles/hotelUthgra.png);
    background-position: center;
 }
 
 .opacidad{
-   opacity: 0.6;
+   opacity: 0.4;
 }
 
 .tarifas{
 
    position: absolute;
    text-align: left;
-   top: 25%;
+   top: 30%;
    right: 10px;
    left: 10px;
    font-family: var(--terciary-font);
-   font-weight: 600;
+   font-weight: 700;
    opacity:1;
    color:black;
 }
