--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -206,9 +206,8 @@
 .detalle_centuria{
    background-size:contain;
    background-repeat: no-repeat;
-   max-width: 100%;
+   width: 100%;
    height: 430px;
-   /* min-height: 300px; */
    background-image: url(../../img/convenio_hoteles/hotelCenturia.png);
    background-position: center;
 }
@@ -231,27 +230,60 @@
    position: absolute;
    text-align: left;
    top: 30%;
-   right: 10px;
-   left: 10px;
+   /* right: 10px; */
+   /* left: 10px; */
    font-family: var(--terciary-font);
    font-weight: 700;
    opacity:1;
    color:black;
+   width: 100%;
+   /* height:max-content; */
+   /* padding: 0 8rem; */
 }
-@media screen and (max-width: 768px) {
+
+@media screen and (max-width: 900px) {
+.detalle_convenioHoteles{
+   flex-direction: column;
+}
+
+.hotel{
+   width: 100%;
+}
+}
+
+@media screen and (max-width: 900px) and (min-width: 600px) {
+   .tarifas{
+      padding: 0 15%;
+   }
+}
+
+/* @media screen and (min-width: 320px) and (max-width: 767px) {
    .detalle_subsidio{
       width: 100%;
    }
 
-   /*.hotel{
+   .hotel{
       width: 100%;
-   } */
- }
-
- @media screen and (max-width: 900px) {
+   }
    .detalle_avenida{
-      height: 300px;
-      transition:all 3s ease-in-out;
+      width: 100%;
+   }
+   .tarifas{
+      padding: 0 80px;
+
+   }
+  }
+
+ @media screen and (max-width: 768px) {
+   .tarifas{
+      padding: 0 5px;
+
+   }
+ }
+ /* @media screen and (max-width: 900px) {
+   .detalle_avenida{
+      /* height: 300px; 
+      /* transition:all 3s ease-in-out; 
    }
    .detalle_centuria{
       height: 300px;
@@ -259,4 +291,7 @@
    .detalle_uthgra{
       height: 300px;
    } 
-}
+   .hotel{
+      width: 100%;
+   }
+} */
