--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -104,7 +104,7 @@
 
 .detalle_subsidio{
    margin-left: 20px;
-   width: 70%;
+   width: 95%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
@@ -187,7 +187,11 @@
 }
 
 .title_hotel{
-   justify-items: center;
+   display: flex;
+   flex-wrap: nowrap;
+   gap: 15px;
+   justify-content: center;
+   align-items: center;
    font-family: var(--terciary-font);
    font-size: var(--font-msmall);
    font-weight: 550;
@@ -256,15 +260,25 @@ display: block;
    background-color: rgba(31, 31, 31, 0.5);
    min-height: 200px;
 }
+
+.tarifas_visible{
+   display: block;
+}
 @media screen and (max-width: 768px) {
    .detalle_subsidio{
       width: 100%;
    }
-   color:black;
-   width: 100%;
-   /* height:max-content; */
-   /* padding: 0 8rem; */
 }
+
+.icon_infoHotel{
+   font-size: var(--font-msmall);
+}
+
+.icon_infoHotel:hover{
+   cursor: pointer;
+   transform: scale(1.1);
+}
+
 
 @media screen and (max-width: 900px) {
 .detalle_convenioHoteles{
