[feature]Loading en Beneficios, anulacion de páginas en html

--- a/css/pages/beneficios.css
+++ b/css/pages/beneficios.css
@@ -1,3 +1,9 @@
+/* Baner superior */
+.banner_principal{
+   display: flex;
+   padding: 10px 100px;
+}
+
 .banner__1 {
    /* padding: 100px; */
    text-align: center;
@@ -264,6 +270,38 @@ display: block;
 .tarifas_visible{
    display: block;
 }
+/* Colocando estilos loading */
+.loading {
+   position: fixed;
+   top: 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   height: 100vh;
+   overflow-x: hidden;
+   background: #fff;
+   color:#000;
+   justify-content: center;
+   align-items: center;
+   font-size: 2rem;
+   display: none;
+   z-index: 10;
+ }
+
+ .loading--show {
+   display: flex;
+ }
+
+ .icon-preload{
+   color: #000;
+   z-index: 1000;
+ }
+
+ .desaparecer{
+   display: none;
+ }
+ /* Fin estilos loading */
+
 @media screen and (max-width: 768px) {
    .detalle_subsidio{
       width: 100%;
