--- a/css/pages/institucional.css
+++ b/css/pages/institucional.css
@@ -156,25 +156,32 @@
     grid-row-end: 4;
 }
 
-.box-10 {
+.box-11 {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 4;
     grid-row-end: 5;
 }
 
-.box-3 {
+.box-10 {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 5;
     grid-row-end: 6;
 }
 
-.box-4 {
+.box-3 {
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 6;
     grid-row-end: 7;
+}
+
+.box-4 {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 7;
+    grid-row-end: 8;
 }
 
 .box-5 {
@@ -195,14 +202,14 @@
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 3;
-    grid-row-end: 4;
+    grid-row-end: 5;
 }
 
 .box-8 {
     grid-column-start: 2;
     grid-column-end: 3;
-    grid-row-start: 6;
-    grid-row-end: 7;
+    grid-row-start: 7;
+    grid-row-end: 8;
 }
 
 .box-9 {
@@ -211,8 +218,8 @@
     justify-self: center;
     grid-column-start: 2;
     grid-column-end: 3;
-    grid-row-start: 4;
-    grid-row-end: 6;
+    grid-row-start: 5;
+    grid-row-end: 7;
 }
 
 .box-img {
