--- a/css/index.css
+++ b/css/index.css
@@ -14,3 +14,4 @@
 @import url(./pages/home.css);
 @import url(./pages/institucional.css);
 @import url(./pages/beneficios.css);
+@import url(./pages/actividadGremial.css);
