[FEAT] - Modificaciones en Novedades

--- a/css/pages/actividadGremial.css
+++ b/css/pages/actividadGremial.css
@@ -128,8 +128,8 @@
     text-align: center;
     max-width:150px;
     background-size:cover;
-    background-image: url('../../img/banner_departamentos/depto_11.jpeg');
-    height: 150px;
+    background-image: url('../../img/logoasociacion.ico');
+    height: 100px;
 }
 
 .card-epigrafe{
