--- a/css/pages/institucional.css
+++ b/css/pages/institucional.css
@@ -9,6 +9,7 @@
         "aside_l articlec"
         "aside_l articlec"
         "aside_l articlec"
+        "aside_l articlec"
         "aside_l articlec";
     grid-template-columns: minmax(220px, 100px) 1fr;
     grid-gap: 20px;
