--- a/css/pages/actividadGremial.css
+++ b/css/pages/actividadGremial.css
@@ -118,10 +118,11 @@
 }
 
 .card-title{
-    font-family: var(--terciary-font);
+    font-family: var(--primary-font);
     font-size: var(--font-normal);
-    font-weight: 600;
+    font-weight: 700;
     text-align: center;
+    line-height: 1.5em;
 }
 
 .card-img{
