[FEAT]Se agrega nueva tipografía y se continúa con contacto

--- a/css/misc/vars.css
+++ b/css/misc/vars.css
@@ -52,7 +52,8 @@
     /* Tipografia */
     --primary-font: 'Inter Tight', sans-serif;
     --alternative-font: 'Raleway', sans-serif;
-    --terciary-font: 'Montserrat', sans-serif;
+    --terciary-font: 'Open Sans', sans-serif;
+    --quaternary-font:'Montserrat', sans-serif;
 
 
     /* Tamaños de Fuentes */
