--- a/css/partials/header.css
+++ b/css/partials/header.css
@@ -64,8 +64,9 @@ header {
 
 .navbar__link {
   text-transform: uppercase;
+  line-height: 1.5em;
   font-size: var(--font-small);
-  font-family: var(--alternative-font);
+  font-family: var(--terciary-font);
   padding: var(--spacing-8) var(--spacing-18);
   display: inline-block;
   /* transition: all 0.3s ease-in-out; */
