[FEAT] Solucionado incompatibilidad con boostrap, finalización de maquetado contacto

--- a/css/pages/actividadGremial.css
+++ b/css/pages/actividadGremial.css
@@ -80,6 +80,10 @@
     padding: 20px;
 }
 
+.contenido_comunicado{
+    padding: 0px 40px 40px;
+}
+
 .pie_comunicado {
     font-size: var(--font-xnormal);
     text-align: right;
