--- a/css/pages/actividadGremial.css
+++ b/css/pages/actividadGremial.css
@@ -119,6 +119,7 @@
     line-height: 1.2em;
     border-bottom: 1px solid #000;
     height: 300px;
+    min-width: 250px;
 }
 
 .card-title{
@@ -132,6 +133,7 @@
 .card-img{
     text-align: center;
     max-width:150px;
+    min-width: 150px;
     background-size:cover;
     background-image: url('../../img/logoasociacion.ico');
     height: 100px;
