--- a/css/pages/institucional.css
+++ b/css/pages/institucional.css
@@ -46,34 +46,34 @@
 
 .article_derechos {
     padding: 20px;
-    font-family: var(--alternative-font);
-    font-size: 1.2em;
-    font-weight: 600;
+    font-family: var(--terciary-font);
+    font-size: 1.1em;
+    font-weight: 500;
     display: flex;
     align-items: center;
-    border-style: solid;
+    border-style: ridge;
     border-color: white;
     width: 100%;
     height: 100%;
     min-height: 200px;
 }
 .article-box7 :nth-child(1){
-    background-color:darkorange;
+    background-color:var(--secondary-color-700);
 }
 .article-box7 :nth-child(2){
-    background-color:grey;
+    background-color:var(--secondary-color-700);
 }
 .article-box7 :nth-child(3){
-    background-color:yellow;
+    background-color:var(--secondary-color-700);
 }
 .article-box7 :nth-child(4){
-    background-color:cornflowerblue;
+    background-color:var(--secondary-color-700);
 }
 .article-box7 :nth-child(5){
-    background-color:chartreuse;
+    background-color:var(--secondary-color-700);
 }
 .article-box7 :nth-child(6){
-    background-color:coral;
+    background-color:var(--secondary-color-700);
 }
 
 .article-img_1 {
@@ -298,7 +298,7 @@
 @media screen and (max-width: 430px) {
 
     .article-box7 {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
         grid-gap:10px;
         width: 100%;
     }
